# s76-kbd-led-statemgr

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  example-config.json  example-state.json  s76-kbd-led-statemgr.py  s76-kbd-led-statemgr.service
.cargo/: config.toml
src/: main.rs
